# IMP-project

./: README.md
ESP_EYE/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.ci.sdcard  sdkconfig.defaults  sdkconfig.old
ESP_EYE/components/file_server/: CMakeLists.txt  file_server.c  file_server.h  mjpeg_tcp_server.c
ESP_EYE/components/recorder/: CMakeLists.txt  idf_component.yml  recorder.c  recorder.h
ESP_EYE/components/sd_card/: CMakeLists.txt  sd_card_helpers.c  sd_card_helpers.h
ESP_EYE/components/wifi/: CMakeLists.txt  wifi_helpers.c  wifi_helpers.h
ESP_EYE/main/: CMakeLists.txt  main.c
ESP_EYE/spiffs/: index.html
ESP_EYE/tools/: check_spiffs_size.sh  spiffs_build_and_flash.sh
ESP_EYE/web/IMP/: index.html  package.json  vite.config.ts
ESP_EYE/web/IMP/src/: App.css  App.tsx  app.ts  index.css  main.tsx
IR sensor/: CMakeLists.txt  sdkconfig
IR sensor/main/: CMakeLists.txt  main.c
